syntax= "proto3";

option java_package = "org.example.projetglobal.stubs";

message Client {
  int64 id = 1;
  string nom = 2;
  string prenom = 3;
  string email = 4;
  string telephone = 5;
}

message Chambre {
  int64 id = 1;
  string type = 2;
  float prix = 3;
  bool disponible = 4;
}

message Reservation {
  int64 id = 1;
  Client client = 2;
  Chambre chambre = 3;
  string dateDebut = 4;
  string dateFin = 5;
  string preferences = 6;
}

message Utilisateur {
  int64 id = 1;
  string nomUtilisateur = 2;
  string motDePasse = 3;
  string role = 4;
}

message ClientRequest {
  string nom = 1;
  string prenom = 2;
  string email = 3;
  string telephone = 4;
}

message ChambreRequest {
  string type = 1;
  float prix = 2;
  bool disponible = 3;
}

message ReservationRequest {
  Client client = 1;
  Chambre chambre = 2;
  string dateDebut = 3;
  string dateFin = 4;
  string preferences = 5;
}

message UtilisateurRequest {
  string nomUtilisateur = 1;
  string motDePasse = 2;
  string role = 3;
}


service HotelService {
  // Clients services
  rpc allClients (Empty) returns (GetAllClientsResponse);
  rpc clientById (ClientIdRequest) returns (Client);
  rpc saveClient (ClientRequest) returns (Client);
  rpc deleteClient (ClientIdRequest) returns (BoolResponse);

  // Chambres services
  rpc allChambres (Empty) returns (GetAllChambresResponse);
  rpc chambreById (ChambreIdRequest) returns (Chambre);
  rpc saveChambre (ChambreRequest) returns (Chambre);
  rpc deleteChambre (ChambreIdRequest) returns (BoolResponse);

  // Utilisateurs services
  rpc allUtilisateurs (Empty) returns (GetAllUtilisateursResponse);
  rpc utilisateurById (UtilisateurIdRequest) returns (Utilisateur);
  rpc saveUtilisateur (UtilisateurRequest) returns (Utilisateur);
  rpc deleteUtilisateur (UtilisateurIdRequest) returns (BoolResponse);

  // Reservations services
  rpc allReservations (Empty) returns (GetAllReservationsResponse);
  rpc reservationById (ReservationIdRequest) returns (Reservation);
  rpc saveReservation (ReservationRequest) returns (Reservation);
  rpc deleteReservation (ReservationIdRequest) returns (BoolResponse);
  rpc updateReservation (UpdateReservationRequest) returns (Reservation);
}

// Define request and response messages
message Empty {}

message ClientIdRequest {
  int64 id = 1;
}

message ChambreIdRequest {
  int64 id = 1;
}

message ReservationIdRequest {
  int64 id = 1;
}

message UtilisateurIdRequest {
  int64 id = 1;
}

message BoolResponse {
  bool success = 1;
}

// Define list responses
message GetAllClientsResponse {
  repeated Client clients = 1;
}

message GetAllChambresResponse {
  repeated Chambre chambres = 1;
}

message GetAllReservationsResponse {
  repeated Reservation reservations = 1;
}

message GetAllUtilisateursResponse {
  repeated Utilisateur utilisateurs = 1;
}

message UpdateReservationRequest {
  int64 id = 1;
  ReservationRequest reservation = 2;
}
